<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>co.tantleffbeef</groupId>
    <artifactId>pluggyTesty</artifactId>
    <version>0.0.2-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <enablePreview>true</enablePreview>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <additionalOptions>--enable-preview</additionalOptions>
                    <release>${java.version}</release>
                    <detectLinks>true</detectLinks>
                    <dependencyLinks>
                        <dependencyLink>
                            <groupId>co.tantleffbeef</groupId>
                            <artifactId>mcplanes-api</artifactId>
                            <url>https://tantleffbeef.co/jd/mcp/</url>
                        </dependencyLink>
                        <dependencyLink>
                            <groupId>org.spigotmc</groupId>
                            <artifactId>spigot-api</artifactId>
                            <url>https://hub.spigotmc.org/javadocs/spigot/</url>
                        </dependencyLink>
                    </dependencyLinks>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>com.jeff_media.armorequipevent</pattern>
                                    <shadedPattern>co.tantleffbeef.pluggytesty.lib.armorequipevent</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.commands</pattern>
                                    <shadedPattern>co.tantleffbeef.pluggytesty.lib.acf</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.locales</pattern>
                                    <shadedPattern>co.tantleffbeef.pluggytesty.lib.locales</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.papermc.lib</pattern>
                                    <shadedPattern>co.tantleffbeef.pluggytesty.lib.paperlib</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>tantleffbeef</id>
            <url>https://maven.tantleffbeef.co/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jeff-media-public</id>
            <url>https://hub.jeff-media.com/nexus/repository/jeff-media-public/</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.intellectualsites.bom</groupId>
                <artifactId>bom-1.18.x</artifactId>
                <version>1.27</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>co.tantleffbeef</groupId>
            <artifactId>mcplanes-api</artifactId>
            <version>0.0.2-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.jeff_media</groupId>
            <artifactId>ArmorEquipEvent</artifactId>
            <version>1.0.2-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-paper</artifactId>
            <version>0.5.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Bukkit</artifactId>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>FastAsyncWorldEdit-Core</artifactId>
                    <groupId>*</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--<dependency>
            <groupId>io.papermc</groupId>
            <artifactId>paperlib</artifactId>
            <version>1.0.7</version>
            <scope>compile</scope>
        </dependency>-->
    </dependencies>
</project>
